fix(css) : curseur sur "auto" pour le contenu d'un jour visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ section.dayContent {
 	left: 0;
 	right: 0;
 	margin: 5% auto;
+	cursor: auto;
 }
 
 section.day.active .dayContent {
